--- a/cart.html
+++ b/cart.html
@@ -11,9 +11,8 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <!-- Calls menu container -->
     <div id="menu-container"></div>
-    <h1>Landing page</h1>
+    <h1>Cart page</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/menu.js"></script>
 </body>
