--- a/cart.html
+++ b/cart.html
@@ -10,10 +10,113 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
-    <div id="menu-container"></div>
-    <h1>Cart page</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/menu.js"></script>
+<body class="bg-light text-dark">
+  <!-- Calls menu container -->
+  <div id="menu-container"></div>
+  <div class="container mt-5">
+    <div class="row">
+      <!-- Shopping Cart Items -->
+      <div class="col-md-7 mb-3 mb-md-0">
+        <div class="mb-3">
+          <a href="products.html" class="text-decoration-none text-dark">
+            <i class="bi bi-arrow-left"></i> Continuar comprando
+          </a>
+        </div>
+        <div class="bg-white rounded p-3 shadow-sm">
+          <h5>Carrito de compras</h5>
+          <p>Tienes 3 items en tu carrito</p>
+
+          <!-- Item 1 -->
+          <div class="d-flex align-items-center border-bottom py-3">
+            <img src="https://via.placeholder.com/50" alt="Iphone 11 pro" class="rounded">
+            <div class="flex-grow-1 ms-3">
+              <h6 class="mb-0">Product 1</h6>
+              <small class="text-muted">Product 1 description</small>
+            </div>
+            <div class="text-center" style="width: 50px;">
+              <span>2</span>
+            </div>
+            <div class="text-end" style="width: 100px;">
+              <span>$900</span>
+            </div>
+            <i class="bi bi-trash text-danger ms-3"></i>
+          </div>
+
+          <!-- Item 2 -->
+          <div class="d-flex align-items-center border-bottom py-3">
+            <img src="https://via.placeholder.com/50" alt="Samsung galaxy Note 10" class="rounded">
+            <div class="flex-grow-1 ms-3">
+              <h6 class="mb-0">Product 2</h6>
+              <small class="text-muted">Product 2 description</small>
+            </div>
+            <div class="text-center" style="width: 50px;">
+              <span>2</span>
+            </div>
+            <div class="text-end" style="width: 100px;">
+              <span>$900</span>
+            </div>
+            <i class="bi bi-trash text-danger ms-3"></i>
+          </div>
+
+          <!-- Item 3 -->
+          <div class="d-flex align-items-center border-bottom py-3">
+            <img src="https://via.placeholder.com/50" alt="Canon EOS M50" class="rounded">
+            <div class="flex-grow-1 ms-3">
+              <h6 class="mb-0">Product 3</h6>
+              <small class="text-muted">Product 3 description</small>
+            </div>
+            <div class="text-center" style="width: 50px;">
+              <span>1</span>
+            </div>
+            <div class="text-end" style="width: 100px;">
+              <span>$1199</span>
+            </div>
+            <i class="bi bi-trash text-danger ms-3"></i>
+          </div>
+        </div>
+      </div>
+
+      <!-- Payment Card Details -->
+      <div class="col-md-5">
+        <div class="card bg-white text-dark shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Detalles de la tarjeta</h5>
+            <div class="mb-3">
+              <img src="img/visa.png" alt="Visa">
+              <img src="img/mcard.png" alt="Mastercard">
+              <img src="img/paypal.png" alt="Paypal">
+            </div>
+            <div class="mb-3">
+              <label for="cardholderName" class="form-label">Nombre del Titular de la Tarjeta</label>
+              <input type="text" class="form-control" id="cardholderName" placeholder="John Doe">
+            </div>
+            <div class="mb-3">
+              <label for="cardNumber" class="form-label">Número de Tarjeta</label>
+              <input type="text" class="form-control" id="cardNumber" placeholder="1234 5678 9012 3456">
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label for="expiration" class="form-label">Vencimiento</label>
+                <input type="text" class="form-control" id="expiration" placeholder="MM/YY">
+              </div>
+              <div class="col-md-6">
+                <label for="cvv" class="form-label">CVV</label>
+                <input type="text" class="form-control" id="cvv" placeholder="123">
+              </div>
+            </div>
+            <div class="mt-4">
+              <p>Subtotal <span class="float-end">$4798.00</span></p>
+              <p>Envío <span class="float-end">$20.00</span></p>
+              <hr>
+              <p>Total<span class="float-end">$4818.00</span></p>
+              <button class="btn btn-info w-100">Checkout <span class="bi bi-arrow-right"></span></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/menu.js"></script>
 </body>
 </html>
