--- a/products.html
+++ b/products.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
-    <!-- Call CSS files -->
-    <link rel="stylesheet" href="css/styles.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -42,35 +40,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        // Fetch de API Platzi
-        fetch('https://api.escuelajs.co/api/v1/products')
-            .then(response => response.json())
-            .then(data => {
-                const productsContainer = document.getElementById('products-container');
-                data.forEach(product => {
-                    const productCard = `
-                        <div class="col-md-4">
-                            <div class="card mb-4 shadow-sm">
-                                <img src="${product.images[0]}" class="card-img-top" alt="${product.title}">
-                                <div class="card-body">
-                                    <h5 class="card-title">${product.title}</h5>
-                                    <p class="card-text">${product.description}</p>
-                                    <p class="card-text"><strong>$${product.price}</strong></p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Agregar al carrito</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    `;
-                    productsContainer.innerHTML += productCard;
-                });
-            })
-            .catch(error => {
-                console.log('Error fetching the products:', error);
-            });
-    </script>
+    <script src="js/products.js"></script> <!-- Archivo JS -->
+
 </body>
 </html>
 
