--- a/cart.html
+++ b/cart.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito de Compras</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Carrito de Compras</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
 </head>
+
 <body class="bg-light text-dark">
   <!-- Menu -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Tienda Online</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="products.html">Productos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="cart.html">Carrito</a>
-                </li>
-            </ul>
-        </div>
+      <a class="navbar-brand" href="#">Tienda Online</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="products.html">Productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="cart.html">Carrito</a>
+          </li>
+        </ul>
+      </div>
     </div>
-</nav>
+  </nav>
   <div class="container mt-5">
     <div class="row">
       <!-- Shopping Cart Items -->
@@ -43,54 +46,10 @@
         </div>
         <div class="bg-white rounded p-3 shadow-sm">
           <h5>Carrito de compras</h5>
-          <p>Tienes 3 items en tu carrito</p>
+          <p id="quantity-items"></p>
 
-          <!-- Item 1 -->
-          <div class="d-flex align-items-center border-bottom py-3">
-            <img src="https://via.placeholder.com/50" alt="Iphone 11 pro" class="rounded">
-            <div class="flex-grow-1 ms-3">
-              <h6 class="mb-0">Product 1</h6>
-              <small class="text-muted">Product 1 description</small>
-            </div>
-            <div class="text-center" style="width: 50px;">
-              <span>2</span>
-            </div>
-            <div class="text-end" style="width: 100px;">
-              <span>$900</span>
-            </div>
-            <i class="bi bi-trash text-danger ms-3"></i>
-          </div>
-
-          <!-- Item 2 -->
-          <div class="d-flex align-items-center border-bottom py-3">
-            <img src="https://via.placeholder.com/50" alt="Samsung galaxy Note 10" class="rounded">
-            <div class="flex-grow-1 ms-3">
-              <h6 class="mb-0">Product 2</h6>
-              <small class="text-muted">Product 2 description</small>
-            </div>
-            <div class="text-center" style="width: 50px;">
-              <span>2</span>
-            </div>
-            <div class="text-end" style="width: 100px;">
-              <span>$900</span>
-            </div>
-            <i class="bi bi-trash text-danger ms-3"></i>
-          </div>
-
-          <!-- Item 3 -->
-          <div class="d-flex align-items-center border-bottom py-3">
-            <img src="https://via.placeholder.com/50" alt="Canon EOS M50" class="rounded">
-            <div class="flex-grow-1 ms-3">
-              <h6 class="mb-0">Product 3</h6>
-              <small class="text-muted">Product 3 description</small>
-            </div>
-            <div class="text-center" style="width: 50px;">
-              <span>1</span>
-            </div>
-            <div class="text-end" style="width: 100px;">
-              <span>$1199</span>
-            </div>
-            <i class="bi bi-trash text-danger ms-3"></i>
+          <div id="container-cart">
+            <!-- Item 1 -->
           </div>
         </div>
       </div>
@@ -135,7 +94,12 @@
       </div>
     </div>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/main.js"></script>
   <script src="js/menu.js"></script>
+  <script src="js/cart.js"></script>
 </body>
+
 </html>
