--- a/invoice.html
+++ b/invoice.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Factura</title>    
+    <title>Factura</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Call CSS files -->
@@ -132,7 +132,8 @@
                         <p class="font-weight-bold mb-0">¡Gracias por comprar con nosotros!</p>
                     </div>
                     <div class="d-flex justify-content-between footer p-3">
-                        <span>Visitanos nuevamente <a href="index.html">click acá</a>
+                        <span>
+                            Visítenos nuevamente <a href="index.html">click acá</a>
                         </span>
                     </div>
                 </div>
