Agregar total en carrito
Agregar total carrito

--- a/cart.html
+++ b/cart.html
@@ -83,11 +83,11 @@
               </div>
             </div>
             <div class="mt-4">
-              <p>Subtotal <span class="float-end">$4798.00</span></p>
-              <p>Envío <span class="float-end">$20.00</span></p>
-              <hr>
-              <p>Total<span class="float-end">$4818.00</span></p>
-              <button class="btn btn-info w-100">Checkout <span class="bi bi-arrow-right"></span></button>
+            <p>Subtotal <span id="subtotal" class="float-end">$0.00</span></p>
+            <p>Envío <span id="shipping" class="float-end">$20.00</span></p>
+            <hr>
+            <p>Total<span id="total" class="float-end">$20.00</span></p>
+            <button class="btn btn-info w-100">Checkout <span class="bi bi-arrow-right"></span></button>
             </div>
           </div>
         </div>
