--- a/cart.html
+++ b/cart.html
@@ -65,29 +65,30 @@
               <img src="img/paypal.png" alt="Paypal">
             </div>
             <div class="mb-3">
-              <label for="cardholderName" class="form-label">Nombre del Titular de la Tarjeta</label>
-              <input type="text" class="form-control" id="cardholderName" placeholder="John Doe" required>
+              <label for="cardholderName" class="form-label">Nombre del titular de la tarjeta</label>
+              <input type="text" class="form-control" id="cardholderName" placeholder="John Doe">
             </div>
             <div class="mb-3">
-              <label for="cardNumber" class="form-label">Número de Tarjeta</label>
-              <input type="text" class="form-control" id="cardNumber" placeholder="1234 5678 9012 3456" required pattern="\d{4}\s\d{4}\s\d{4}\s\d{4}">
+              <label for="cardNumber" class="form-label">Número de tarjeta</label>
+              <input type="text" class="form-control" id="cardNumber"
+                pattern="\d{4}\s\d{4}\s\d{4}\s\d{4}">
             </div>
             <div class="row">
               <div class="col-md-6">
                 <label for="expiration" class="form-label">Vencimiento</label>
-                <input type="text" class="form-control" id="expiration" placeholder="MM/YY" required pattern="\d{2}/\d{2}">
+                <input type="text" class="form-control" id="expiration">
               </div>
               <div class="col-md-6">
                 <label for="cvv" class="form-label">CVV</label>
-                <input type="" class="form-control" id="cvv" placeholder="123" required pattern="\d{3}">
+                <input type="" class="form-control" id="cvv">
               </div>
             </div>
             <div class="mt-4">
-            <p>Subtotal <span id="subtotal" class="float-end">$0.00</span></p>
-            <p>Envío <span id="shipping" class="float-end">$20.00</span></p>
-            <hr>
-            <p>Total<span id="total" class="float-end">$20.00</span></p>
-            <button class="btn btn-info w-100">Checkout <span class="bi bi-arrow-right"></span></button>
+              <p>Subtotal <span id="subtotal" class="float-end">$0.00</span></p>
+              <p>Envío <span id="shipping" class="float-end">$0.00</span></p>
+              <hr>
+              <p>Total<span id="total" class="float-end">$0.00</span></p>
+              <button class="btn btn-info w-100">Checkout <span class="bi bi-arrow-right"></span></button>
             </div>
           </div>
         </div>
@@ -96,6 +97,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://unpkg.com/imask"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/menu.js"></script>
